fix font sizing on mobile

--- a/styles/markdown.module.css
+++ b/styles/markdown.module.css
@@ -63,3 +63,14 @@
 	margin-left: auto;
 	margin-right: auto;
 }
+
+@media (max-width: 600px) {
+	.markdown p,
+	.markdown li {
+		font-size: 1.1rem;
+	}
+
+	.markdown strong {
+		font-size: 1.5rem;
+	}
+}
